test/sematest/valid/create_new_class.java
class NewClass {}

class Test {
  public NewClass test() {
    return NewClass();
  }
}
