test/sematest/invalid/duplicate_fields.java
class Test {
  public int field1;
  public int field1;
}
